# stm_epd

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32F031K6Tx_FLASH.ld  llvm.ld  stm_epd.ioc
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
